resolving some header icon spacing issues

--- a/projects/novo-elements/src/elements/header/Header.scss
+++ b/projects/novo-elements/src/elements/header/Header.scss
@@ -41,7 +41,7 @@ novo-header {
       max-width: calc(100% - 40px);
 
       novo-icon {
-        margin-right: 0.6rem;
+        margin-right: 1rem;
       }
     }
     .header-titles {
