--- a/projects/novo-elements/src/styles/iconography.scss
+++ b/projects/novo-elements/src/styles/iconography.scss
@@ -55,7 +55,7 @@ h6,
 p,
 span {
   > i {
-    margin: 0 0.4rem 0 0;
+    margin: 0 1rem 0 0;
     padding: 0;
     &:before {
       vertical-align: middle !important;
